# orbit

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release-executable.yaml
crates/app/: Cargo.toml
crates/app/src/: bootstrap.rs  diagnostics.rs  download.rs  main.rs  settings.rs
crates/bench/: Cargo.toml
crates/core/: Cargo.toml
crates/data/db/: Cargo.toml
crates/data/db/migrations/: 0001_baseline.sql  0003_scheduler.sql
crates/data/db/src/: migrations.rs  repo.rs  tests.rs
crates/data/db/src/repo/: embeddings.rs  files.rs  jobs.rs  models.rs  sources.rs  storage.rs
crates/orbit-app/: Cargo.toml
crates/orbit-app/src/: bootstrap.rs  main.rs
crates/orbit-cache/: Cargo.toml
crates/orbit-cache/src/: lib.rs  namespace.rs  service.rs  tests.rs
crates/orbit-core/: Cargo.toml
crates/orbit-core/src/: data_class.rs  error.rs  lib.rs  status.rs  tests.rs  timeutil.rs  versions.rs
crates/orbit-db/: Cargo.toml
crates/orbit-extract/: Cargo.toml
crates/orbit-extract/src/: lib.rs  markdown.rs  normalize.rs  registry.rs  tests.rs  text.rs  types.rs
crates/orbit-fs/: Cargo.toml
crates/orbit-fs/src/: hashing.rs  lib.rs  path_guard.rs  policy.rs  scanner.rs  tests.rs
crates/orbit-fs/src/tests/: common.rs  path_guard.rs  scanner.rs
crates/orbit-models/: Cargo.toml
crates/orbit-models/src/: lib.rs
crates/orbit-search/: Cargo.toml
crates/orbit-search/src/: fts5.rs  lib.rs  query.rs  tests.rs
crates/orbit-ui/: Cargo.toml
crates/orbit-ui/src/: i18n.rs  lib.rs  shell.rs  state.rs  tests.rs  views.rs
crates/orbit-ui/src/i18n/: en.rs  ja.rs
crates/orbok-app/: Cargo.toml  build.rs
crates/orbok-cache/: Cargo.toml
crates/orbok-db/: Cargo.toml
crates/orbok-db/migrations/: 0002_trigram_index.sql
crates/orbok-db/src/: catalog.rs  lib.rs  migrations.rs  repo.rs
crates/orbok-db/src/repo/: chunks.rs  cleanup.rs  embeddings.rs  events.rs  files.rs  jobs.rs  models.rs  settings.rs  sources.rs  storage.rs
crates/orbok-embed/: Cargo.toml
crates/orbok-extract/: Cargo.toml
crates/orbok-extract/src/: docx.rs  lib.rs  normalize.rs  pdf.rs  plugin.rs  registry.rs  tests.rs  text.rs  types.rs
crates/orbok-extract/src/tests/: v07_features.rs
crates/orbok-fs/: Cargo.toml
crates/orbok-models/: Cargo.toml
crates/orbok-models/src/: lib.rs
crates/orbok-search/: Cargo.toml
crates/orbok-ui/: Cargo.toml
crates/orbok-ui/src/: i18n.rs  lib.rs  shell.rs  state.rs  tests.rs  views.rs
crates/orbok-ui/src/i18n/: en.rs  ja.rs
crates/orbok-ui/src/views/: wizard.rs
crates/orbok-workers/: Cargo.toml
crates/orbok-workers/src/: chunk_and_index.rs  embedding.rs  extract.rs  lib.rs  model_verifier.rs  storage.rs  tests.rs
crates/orbok-workers/src/tests/: embedding_hybrid.rs  pipeline.rs  v04_features.rs  v08_features.rs  v092_features.rs  v09_rc.rs
crates/pipeline/extract/: Cargo.toml
crates/pipeline/extract/src/: chunker.rs  docx.rs  html.rs  lib.rs  markdown.rs  pdf.rs  plugin.rs  registry.rs  tests.rs  text.rs  types.rs
crates/pipeline/extract/src/tests/: rfc044_isolation.rs  rfc044_limits.rs  v07_features.rs
crates/search/engine/: Cargo.toml
crates/search/engine/src/: filter.rs  hybrid.rs  lib.rs  multilingual.rs  result_trust.rs  rrf.rs  service.rs  snippet.rs  tests.rs
crates/search/engine/src/tests/: rfc007_keyword.rs  rfc038_result_trust.rs  rfc041_filter.rs
crates/ui/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
rfcs/: README.md
rfcs/appendices/: APPENDIX-A-localcache-integration.md
rfcs/archive/: 026-encrypted-local-indexes.md
rfcs/done/: 001-local-data-classification-and-lifecycle.md  002-sqlite-catalog-schema-and-migration-policy.md  003-source-registration-and-file-access-boundary.md  004-file-scanner-and-change-detection.md  005-document-extraction-pipeline.md  006-adaptive-chunking-and-location-metadata.md  007-keyword-search-engine-selection.md  008-embedding-model-and-vector-storage.md  009-hybrid-search-and-rrf-fusion.md  010-optional-local-reranking.md  011-storage-dashboard-and-cleanup-ux.md  012-model-registry-and-installation-workflow.md  013-search-view-and-result-explanation-ux.md  014-japanese-and-mixed-language-search-strategy.md  015-security-hardening-for-local-files-and-local-api.md  016-benchmark-and-retrieval-evaluation-plan.md  017-packaging-and-distribution-strategy.md  018-crash-recovery-diagnostics-and-repair-tools.md  019-test-matrix-and-release-readiness.md  020-documentation-and-user-guidance-structure.md  021-default-embedding-model-selection.md  022-pdf-extraction-backend-selection.md  023-vector-ann-indexing.md  024-vector-quantization.md  025-ocr-pipeline.md  027-gui-framework-finalization.md  028-plugin-extractor-architecture.md  029-model-download-integrity-and-trust-policy.md  030-portable-mode.md  031-gui-internationalization.md  032-design-token-foundation-and-theming.md  033-component-primitive-migration.md  034-accessibility-conformance.md  035-inclusive-design.md  036-resource-aware-indexing-scheduler-and-backpressure.md  037-source-lifecycle-refresh-policy-and-change-detection-ux.md  038-result-freshness-trust-badges-and-recovery-actions.md  039-privacy-modes-and-local-data-visibility.md  040-safe-diagnostics-and-redacted-support-bundle.md  041-search-narrow-and-browse-around.md  (+3 more)
rfcs/draft/: 021-default-embedding-model-selection.md  022-pdf-extraction-backend-selection.md  023-vector-ann-indexing.md  024-vector-quantization.md  025-ocr-pipeline.md  026-encrypted-local-indexes.md  028-plugin-extractor-architecture.md  029-model-download-integrity-and-trust-policy.md  030-portable-mode.md
rfcs/handoffs/: HANDOFF-032-design-token-foundation.md  HANDOFF-033-component-primitive-migration.md  HANDOFF-034-accessibility-conformance.md  HANDOFF-035-inclusive-design.md  HANDOFF-036-scheduler.md  HANDOFF-037-source-lifecycle.md  HANDOFF-038-result-trust.md  HANDOFF-039-privacy-modes.md  HANDOFF-040-diagnostics.md  README.md  (+9 more)
scripts/: check-design-tokens.sh  checksum.sh  package.sh
src/: lib.rs  main.rs
(+194 files in other folders)
