[workspace]
resolver = "2"
members = [
    "crates/orbok-core",
    "crates/orbok-db",
    "crates/orbok-fs",
    "crates/orbok-cache",
    "crates/orbok-extract",
    "crates/orbok-search",
    "crates/orbok-models",
    "crates/orbok-workers",
    "crates/orbok-bench",
    "crates/orbok-embed",
    "crates/orbok-ui",
    "crates/orbok-app",
]

[workspace.package]
version = "0.9.3"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["nabbisen"]
categories = ["gui", "development-tools", "text-processing", "visualization"]
keywords = ["gui", "search", "text", "pdf", "excel"]
repository = "https://github.com/nabbisen/orbok"

[workspace.dependencies]
# internal crates
orbok-core = { version = "0.9.3", path = "crates/orbok-core" }
orbok-db = { version = "0.9.3", path = "crates/orbok-db" }
orbok-fs = { version = "0.9.3", path = "crates/orbok-fs" }
orbok-cache = { version = "0.9.3", path = "crates/orbok-cache" }
orbok-extract = { version = "0.9.3", path = "crates/orbok-extract" }
orbok-search = { version = "0.9.3", path = "crates/orbok-search" }
orbok-models = { version = "0.9.3", path = "crates/orbok-models" }
orbok-workers = { version = "0.9.3", path = "crates/orbok-workers" }
orbok-bench = { version = "0.9.3", path = "crates/orbok-bench" }
orbok-embed = { version = "0.9.3", path = "crates/orbok-embed" }
orbok-ui = { version = "0.9.3", path = "crates/orbok-ui" }

# database — pinned to 0.40 to match localcache 0.20.0
# (single libsqlite3-sys rule; see RFC-002 amendment / Appendix A §21)
rusqlite = { version = "0.40", features = ["bundled"] }

# cache engine — Appendix A pins 0.20.0 (mtime ns-precision fix, schema v5)
localcache = { version = "0.20.0", features = ["compression", "tracing"] }

# GUI — RFC-027 decision: iced 0.14 via snora 0.8
iced = { version = "0.14", features = ["tokio"] }
snora = "0.8"

# shared utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
sha2 = "0.11"
time = { version = "0.3", features = ["formatting", "macros"] }
app-json-settings = { version = "2" }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
lopdf = "0.41"
zip = { version = "2", default-features = false, features = ["deflate"] }

# dev
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
