[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/data/db",
    "crates/data/fs",
    "crates/data/cache",
    "crates/pipeline/extract",
    "crates/search/engine",
    "crates/search/models",
    "crates/pipeline/workers",
    "crates/bench",
    "crates/search/embed",
    "crates/ui",
    "crates/app",
]

[workspace.package]
version = "0.9.12"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["nabbisen"]
categories = ["gui", "development-tools", "text-processing", "visualization"]
keywords = ["gui", "search", "text", "pdf", "excel"]
repository = "https://github.com/nabbisen/orbok"

[workspace.dependencies]
# internal crates
orbok-core = { version = "0.9.12", path = "crates/core" }
orbok-db = { version = "0.9.12", path = "crates/data/db" }
orbok-fs = { version = "0.9.12", path = "crates/data/fs" }
orbok-cache = { version = "0.9.12", path = "crates/data/cache" }
orbok-extract = { version = "0.9.12", path = "crates/pipeline/extract" }
orbok-search = { version = "0.9.12", path = "crates/search/engine" }
orbok-models = { version = "0.9.12", path = "crates/search/models" }
orbok-workers = { version = "0.9.12", path = "crates/pipeline/workers" }
orbok-bench = { version = "0.9.12", path = "crates/bench" }
orbok-embed = { version = "0.9.12", path = "crates/search/embed" }
orbok-ui = { version = "0.9.12", path = "crates/ui" }

# database — pinned to 0.40 to match localcache 0.20.0
# (single libsqlite3-sys rule; see RFC-002 amendment / Appendix A §21)
rusqlite = { version = "0.40", features = ["bundled"] }

# cache engine — Appendix A pins 0.20.0 (mtime ns-precision fix, schema v5)
localcache = { version = "0.20.0", features = ["compression", "tracing"] }

# GUI — RFC-027 decision: iced 0.14 via snora 0.18
iced = { version = "0.14", features = ["tokio"] }
snora = "0.18"

# shared utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
sha2 = "0.11"
time = { version = "0.3", features = ["formatting", "macros"] }
app-json-settings = { version = "2" }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
lopdf = "0.41"
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"

# dev
iced_test = "0.14"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
