[package]
name = "orbok-app"
description = "orbok application binary: backend bootstrap and GUI launch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[[bin]]
name = "orbok"
path = "src/main.rs"

[dependencies]
orbok-embed = { workspace = true }
app-json-settings = { workspace = true }
serde = { workspace = true }
orbok-core = { workspace = true }
orbok-db = { workspace = true }
orbok-fs = { workspace = true }
orbok-cache = { workspace = true }
orbok-models = { workspace = true }
orbok-search = { workspace = true }
orbok-extract = { workspace = true }
orbok-workers = { workspace = true }
orbok-ui = { workspace = true }
iced = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = { workspace = true }
