[package]
name = "orbit-app"
description = "orbit application binary: backend bootstrap and GUI launch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[[bin]]
name = "orbit"
path = "src/main.rs"

[dependencies]
orbit-core = { workspace = true }
orbit-db = { workspace = true }
orbit-fs = { workspace = true }
orbit-cache = { workspace = true }
orbit-models = { workspace = true }
orbit-ui = { workspace = true }
iced = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
