[package]
name = "orbit-cache"
description = "orbit cache-engine boundary over localcache (Appendix A)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
orbit-core = { workspace = true }
orbit-db = { workspace = true }
orbit-fs = { workspace = true }
localcache = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
