[package]
name = "orbit-core"
description = "orbit shared vocabulary: identifiers, data lifecycle classes, status enums, errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
