[package]
name = "orbit-extract"
description = "orbit document extraction pipeline: extractor trait, normalization, text/markdown extractors (RFC-005)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
orbit-core = { workspace = true }
orbit-fs = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
