[package]
name = "orbit-fs"
description = "orbit safe file access boundary, source policy, scanner (RFC-003/RFC-004)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
orbit-core = { workspace = true }
orbit-db = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
