[package]
name = "orbok-extract"
description = "orbok document extraction pipeline: extractor trait, normalization, text/markdown extractors (RFC-005)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lopdf = "0.34"
orbok-core = { workspace = true }
orbok-db = { workspace = true }
orbok-fs = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
orbok-embed = { workspace = true }
sha2 = { workspace = true }
orbok-models = { workspace = true }
orbok-db = { workspace = true }
tempfile = { workspace = true }
