[package]
name = "orbok-workers"
description = "orbok pipeline workers: extraction → chunking → keyword indexing (M5/M6)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
orbok-models = { workspace = true }
orbok-search = { workspace = true }
rusqlite = { workspace = true }
orbok-core = { workspace = true }
orbok-db = { workspace = true }
orbok-fs = { workspace = true }
orbok-cache = { workspace = true }
orbok-extract = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
