[package]
name = "orbok-extract"
description = "orbok document extraction pipeline: extractor trait, normalization, text/markdown extractors (RFC-005)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
orbok-core = { workspace = true }
orbok-db = { workspace = true }
orbok-fs = { workspace = true }
lopdf = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
orbok-db = { path = "../../data/db" }
orbok-embed = { path = "../../search/embed" }
orbok-models = { path = "../../search/models" }
sha2 = { workspace = true }
tempfile = { workspace = true }
